# GSG-Framework

./: CMakeLists.txt  LICENSE.md  README.md
include/: Config.in  Engine.hpp  Exception.hpp  Logger.hpp
src/: Engine.cpp  Exception.cpp  Logger.cpp  Main.cpp
